--- a/app/assets/stylesheets/customer-profile.scss
+++ b/app/assets/stylesheets/customer-profile.scss
@@ -1,32 +1,31 @@
-.customer-profile{
+.customer-profile {
   background-color: black;
   padding-bottom: 0;
-  .register{
-  
-  background: -webkit-linear-gradient(-250deg, #4d614b, #22f87b);
-  padding: 3%}
+  height:100vh;
+  .register {
+    background: -webkit-linear-gradient(-250deg, #4d614b, #22f87b);
+    padding: 3%;
+  }
 
-  
-  .btn-sm{
+  .btn-sm {
     background: transparent;
     text-decoration: none;
-    font-weight: 700; 
-  }
- 
-  .register-left{
-  text-align: center;
-  color: #fff;
-  margin-top: 0%;
+    font-weight: 700;
   }
 
-  .register-left .link{
-    display:flex;
+  .register-left {
+    text-align: center;
+    color: #fff;
+    margin-top: 0%;
+  }
+
+  .register-left .link {
+    display: flex;
     flex-direction: column;
     margin-top: 5%;
     justify-content: center;
-
   }
-  .register-left .link a{
+  .register-left .link a {
     border: none;
     border-radius: 1.5rem;
     padding: 3% 7%;
@@ -39,22 +38,25 @@
     margin-bottom: 3%;
     cursor: pointer;
   }
-  .review{overflow-y: scroll; height:50%;}
-  .register-right{
+  .review {
+    overflow-y: scroll;
+    height: 250px;
+  }
+  .register-right {
     background: #f8f9fa;
     border-top-left-radius: 10% 50%;
     border-bottom-left-radius: 10% 50%;
     background: -webkit-linear-gradient(left, #f3f7f2, #edf3efe8);
-    padding: 10% 50% 0% 50%
+    padding: 10% 50% 0% 50%;
   }
-  .register-right h4{
+  .register-right h4 {
     margin-bottom: 0;
   }
-  .link1{
+  .link1 {
     display: flex;
     justify-content: flex-end;
   }
-  .link1 a{
+  .link1 a {
     border: none;
     border-radius: 1.5rem;
     padding: 1% 5%;
@@ -65,13 +67,14 @@
 
     margin-bottom: 1%;
     cursor: pointer;
-    text-align: center
+    text-align: center;
   }
-  .link2{
+  .link2 {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-  }.link3 a{
+  }
+  .link3 a {
     border: none;
     border-radius: 1.5rem;
     padding: 5% 10%;
@@ -81,10 +84,10 @@
     color: #383d41;
     margin-bottom: 1%;
     cursor: pointer;
-    text-align: center
+    text-align: center;
   }
 
-  .link2 .btn-primary{
+  .link2 .btn-primary {
     border: none;
     border-radius: 1.5rem;
     padding: 1% 3%;
@@ -94,36 +97,36 @@
     color: #383d41;
     margin-bottom: 1%;
     cursor: pointer;
-    text-align: center
+    text-align: center;
   }
-  .link2 .btn-primary a{
+  .link2 .btn-primary a {
     font-weight: bold;
     color: #383d41;
   }
 
-  .list-group-item-action1{background: -webkit-linear-gradient(left, #f3f7f2, #edf3efe8) }
-  .review .list-group-item-action1 h6{
-    border-bottom:1px solid #4ccc25;
-    padding-bottom: 10px
+  .list-group-item-action1 {
+    background: -webkit-linear-gradient(left, #f3f7f2, #edf3efe8);
   }
-  .list-group-item-action .mb-1{
-    border-bottom:1px solid #4ccc25;
-    padding-bottom: 10px
+  .review .list-group-item-action1 h6 {
+    border-bottom: 1px solid #4ccc25;
+    padding-bottom: 10px;
   }
-  .btn-group-sm{
+  .list-group-item-action .mb-1 {
+    border-bottom: 1px solid #4ccc25;
+    padding-bottom: 10px;
+  }
+  .btn-group-sm {
     display: flex;
-    justify-content:flex-end;
-
+    justify-content: flex-end;
   }
-  .modal-header{
+  .modal-header {
     background: -webkit-linear-gradient(-250deg, #7e8b7c, #22f87b);
   }
-  #show-botton{
+  #show-botton {
     display: inline-block;
     float: right;
-    
   }
-  #show-botton a{
+  #show-botton a {
     color: #40af31;
   }
   .btn-secondary1 {
@@ -137,51 +140,54 @@
     color: #383d41;
     margin-bottom: 1%;
     // cursor: pointer;
-    text-align: center
+    text-align: center;
   }
-  .register-left img{
+  .register-left img {
     margin-top: 0;
     margin-bottom: 5%;
     width: 50%;
-    -webkit-animation: mover 2s infinite  alternate;
-    animation: mover 1s infinite  alternate;
+    -webkit-animation: mover 2s infinite alternate;
+    animation: mover 1s infinite alternate;
   }
   @-webkit-keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-20px);
+    }
   }
   @keyframes mover {
-    0% { transform: translateY(0); }
-    100% { transform: translateY(-20px); }
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-20px);
+    }
   }
-  .register-left p{
+  .register-left p {
     font-weight: lighter;
     padding: 0;
     margin-top: 0;
     margin-bottom: 10px;
-    color:black
+    color: black;
   }
-  .register-left h5{
-    
+  .register-left h5 {
     padding: 0;
     margin-top: 0;
     margin-bottom: 5px;
   }
-  h5.exp{
+  h5.exp {
     margin-bottom: 20px;
   }
 
-  .register-right{
+  .register-right {
     display: flex;
     flex-direction: column;
     padding: 50px;
-
-
-
-
   }
 
-  .register-heading{
+  .register-heading {
     text-align: center;
     margin-top: 8%;
     margin-bottom: -15%;
