--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -67,7 +67,7 @@
                                           </div>
                                           
                                           
-                                          <% if job.accepted == true %>
+                                          <% if job.accepted == true && customer_signed_in? %>
                                             <button type="button" class="btn btn-secondary"><%= link_to 'Pay Now', show_job_path(job) %></button>
                                           <% end %>
                                           <% if customer_signed_in? %>                   
@@ -77,7 +77,7 @@
                                               <button type="button" class="btn btn-secondary"><%= link_to "Edit", edit_job_path(job) %></button>
                                               <button type="button" class="btn btn-secondary"><%= link_to "Delete", show_job_path(job),  method: :delete,data: { confirm: 'Are you sure?' } %></button>
                       
-                                            </div>s
+                                            </div>
                                           <% end %>
                                         <%end%>
                                     <%end%>
