--- a/app/views/workers/show.html.erb
+++ b/app/views/workers/show.html.erb
@@ -47,7 +47,7 @@
                 </div>
             <%end%>
 
-            <div class="list-group review" style="overflow-y: scroll; height:50%;">
+            <div class="list-group review">
                 <%= render "worker_reviews/worker-review" %>  
             </div>
             <div class="link2">
